--- a/theme/wtp18/templates/blocks/navigation.html
+++ b/theme/wtp18/templates/blocks/navigation.html
@@ -2,7 +2,7 @@
 	<nav  role="navigation">
 		<div class="home">
 			<a ng-href="/fr/accueil" class="ng-scope">
-			<img alt="" style="height:70px;" class="img-responsive" ng-src="/dam?media-id=5a6f4c1d396588d25e999bd9&amp;">
+			<img alt="" style="height:90px;" class="img-responsive" ng-src="/dam?media-id=5a6f4c1d396588d25e999bd9&amp;">
 			</a>
 		</div>
         <div class="navbar-header">
@@ -13,7 +13,7 @@
 				<li id="push-button" class="home-button" ng-click="ToggleNav()" ><a>Æ</a></li>
             </ul>
         </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="padding-left:110px">
             <ul class="nav navbar-nav">
             	<!--<li id="push-button" class="home-button visible-xs-block" ng-click="ToggleNav()"><a>Æ</a></li>-->
 				<li class="home-button">
