--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -137,11 +137,18 @@ a:link, a:visited, a:hover,a{text-decoration:none}
 .navbar-fixed-top li{line-height:30px;text-transform:uppercase;color:@txt_violet}
 .navbar-fixed-top{border-width:0; max-width: @max_width; width: 100; margin:0 auto;}
 nav li a {color:@txt_violet ;text-shadow:none;}
-nav {margin-bottom:0px;}
-nav:after{
-    content:'';
+nav.top-navigation {
+    margin-bottom:0px;background-color:transparent
+    .navbar-collapse{background: white}
+}
+nav.top-navigation:after{
+    content: '';
     display: block;
-    background-image: url('../img/vague.png');
+    background-image: url(../img/vague.png);
+    height: 36px;
+    background-repeat: repeat-x;
+    width: 100%;
+    background-size: 100px;
 }
 .shortsingle-rubedo .shortsingle-img-container{ width:100%;}
 .entry-header{text-align:center;margin-bottom:15px}
