--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -216,7 +216,10 @@ display: block;
 //.home-button:hover{background-color:@hover;}
 .navbar-nav > li.home-button:hover > a, .home-button:hover > a{font-size:2.5em;}
 .nav li{float:left}
-.home {float:left}
+.home {
+    float:left;
+    position: absolute;
+}
 .navbar-toggle{float:right; border:0px;margin:0px;padding:0px}
 #push-button{float:right};
 /*NAV SECONDAIRE*/
