--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -138,8 +138,8 @@ a:link, a:visited, a:hover,a{text-decoration:none}
 .navbar-fixed-top{border-width:0; max-width: @max_width; width: 100; margin:0 auto;}
 nav li a {color:@txt_violet ;text-shadow:none;}
 nav.top-navigation {
-    margin-bottom:0px;background-color:transparent
-    .navbar-collapse{background: white}
+    margin-bottom:0px;background-color:transparent;
+    .navbar-collapse{background-color: white}
 }
 nav.top-navigation:after{
     content: '';
