--- a/theme/wtp18/css/wtp2018.css
+++ b/theme/wtp18/css/wtp2018.css
@@ -241,7 +241,8 @@ nav.top-navigation {
   margin-bottom: 0px;
   background-color: transparent;
 }
-nav.top-navigation .navbar-collapse {
+nav.top-navigation .navbar-collapse,
+nav.top-navigation .navbar-header {
   background-color: #ffffff;
 }
 nav.top-navigation:after {
