--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -139,7 +139,7 @@ a:link, a:visited, a:hover,a{text-decoration:none}
 nav li a {color:@txt_violet ;text-shadow:none;}
 nav.top-navigation {
     margin-bottom:0px;background-color:transparent;
-    .navbar-collapse{background-color: white}
+    .navbar-collapse, .navbar-header{background-color: white}
 }
 nav.top-navigation:after{
     content: '';
