--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -219,6 +219,8 @@ display: block;
 .home {
     float:left;
     position: absolute;
+    img{transform: scale(1);transition: transform 0.5s ease}
+    img:hover{transform: scale(1).1;}
 }
 .navbar-toggle{float:right; border:0px;margin:0px;padding:0px}
 #push-button{float:right};
