--- a/theme/wtp18/css/wtp2018.css
+++ b/theme/wtp18/css/wtp2018.css
@@ -388,6 +388,13 @@ img.hover:hover {
   float: left;
   position: absolute;
 }
+.home img {
+  transform: scale(1);
+  transition: transform 0.5s ease;
+}
+.home img:hover {
+  transform: scale(1) 0.1;
+}
 .navbar-toggle {
   float: right;
   border: 0px;
