--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -76,6 +76,11 @@ a:link, a:visited, a:hover,a{text-decoration:none}
      .col-xs-4,.col-xs-6, .col-xs-8{width:100%;}
      .col-xxs-6{width:50%;float:left;}
 }
+@media screen and (max-width: 400px) {
+  .nav-entree{
+    font-size: 1.5em !important;
+  }
+}
 
 @media screen and (max-width: 768px) {
     .container > .navbar-header, .container-fluid > .navbar-header, .container > .navbar-collapse, .container-fluid > .navbar-collapse{margin-left:0; max-height:50px; margin-right:0}
