--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -242,10 +242,15 @@ display: block;
 .nav-sec a{text-decoration:none;cursor: pointer;color:white;}
 .nav-sec a:hover{font-size:1.1em;color:white;}
 /*NAV ENTRÉE*/
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 400px) {
 	.nav-entree {padding-top:300px;}
 	.nav-entree.header.content{height: 800px;margin-top: -40px;}
 	.nav-entree .titre1{height: 100px;}
+}
+@media screen and (min-width: 400px) and (max-width: 768px) {
+	.nav-entree {padding-top:300px;}
+	.nav-entree.header.content{height: 800px;margin-top: -40px;}
+	.nav-entree .titre1{height: 50px;}
 }
 @media screen and (min-width: 768px) {
 	.nav-entree {padding-top:400px;}
