--- a/theme/wtp18/templates/blocks/navigation.html
+++ b/theme/wtp18/templates/blocks/navigation.html
@@ -33,7 +33,7 @@
 					</ul>
 				</li>
             </ul>
-            <ul class="nav navbar-nav navbar-right" ng-controller="LanguageMenuController as languageMenuCtrl">
+            <ul class="nav navbar-nav navbar-right" ng-controller="LanguageMenuController as languageMenuCtrl" style="position:absolute; right:0">
 				<li class="home-button hidden-xs" >
 					<a rubedo-page-link="5a630da239658886137fcea7">C</a>
 				</li>
