--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -89,6 +89,9 @@ a:link, a:visited, a:hover,a{text-decoration:none}
 @media screen and (min-width: 500px) and (max-width: 768px){
     .container{width:@mobile;}
 }
+@media screen and (min-width: 1000px){
+    .container{width:720px;}
+}
 
 /*slider controls*/
 .owl-theme .owl-controls{
