--- a/theme/cana_org/templates/blocks/navigation.html
+++ b/theme/cana_org/templates/blocks/navigation.html
@@ -8,8 +8,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a scroll-position="scroll2" ng-if="blockConfig.displayRootPage && blockConfig.imageFile" class="navbar-brand " ng-href="{{menuCtrl.menu.url}}">
-                <img   ng-src="{{rubedo.imageUrl.getUrlByMediaId(blockConfig.imageFile ,{height:'60px',mode:'boxed'})}}" ng-if="rubedo.current.page.id!=blockConfig.rootPage || (rubedo.current.page.id==blockConfig.rootPage&&scroll2>=500)"/>
-                <img   ng-src="{{rubedo.imageUrl.getUrlByMediaId('5954bcb73965886261c47040' ,{height:'60px',mode:'boxed'})}}" ng-if="rubedo.current.page.id==blockConfig.rootPage&&scroll2<500"/>
+                <img   ng-src="{{rubedo.imageUrl.getUrlByMediaId(blockConfig.imageFile ,{height:'60px',mode:'boxed'})}}" ng-if="rubedo.current.page.id!=blockConfig.rootPage"/>
                <!-- -->
             </a>
         </div>
