--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -237,14 +237,15 @@ display: block;
 #push-button{float:right};
 /*NAV SECONDAIRE*/
 .nav-sec{
-				font-size: 2em;
-				text-align: center;
-				color: white;
-				margin:0;
-				font-family: 'Oswald SemiBold';
-				text-transform: uppercase;
+    font-size: 2em;
+    text-align: center;
+    color: white;
+    margin:0;
+    font-family: 'Oswald SemiBold';
+    text-transform: uppercase;
 }
-.nav-sec p{margin:50px;}
+.nav-sec>div{height:80px; line-height:80px}
+//.nav-sec p{margin:50px;}
 .nav-sec a{text-decoration:none;cursor: pointer;color:white;}
 .nav-sec a:hover{font-size:1.1em;color:white;}
 /*NAV ENTRÉE*/
