--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -88,9 +88,11 @@ a:link, a:visited, a:hover,a{text-decoration:none}
 
 @media screen and (min-width: 500px) and (max-width: 768px){
     .container{width:@mobile;}
+    .container2{width:550px;}
 }
 @media screen and (min-width: 1000px){
     .container{width:720px;}
+    .container2{width:1000px;}
 }
 
 /*slider controls*/
