--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -246,7 +246,7 @@ display: block;
     font-family: 'Oswald SemiBold';
     text-transform: uppercase;
 }
-.nav-sec>div{height:80px; line-height:80px}
+.nav-sec>div{height:80px; line-height:80px; overflow-y:hidden}
 //.nav-sec p{margin:50px;}
 .nav-sec a{text-decoration:none;cursor: pointer;color:white;}
 .nav-sec a:hover{font-size:1.1em;color:white;}
