--- a/theme/wtp18/templates/blocks/navigation.html
+++ b/theme/wtp18/templates/blocks/navigation.html
@@ -1,4 +1,4 @@
-<div ng-controller="MenuController as menuCtrl" is-in-view="scroll">
+<div ng-controller="MenuController as menuCtrl" >
 	<nav  role="navigation" class="top-navigation">
 		<div class="home">
 			<a ng-href="/fr/accueil" class="ng-scope">
