--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -1754,18 +1754,18 @@ ul.programme li:first-of-type:first-line{font-size:1.5em}
 .slide-center{
 	color:@txt;
 	height: 50%;
-	h3{text-transform: uppercase; margin-top:0; font-weight: bold; padding: 0px 48px }
+	h3{text-transform: uppercase; margin-top:0; font-size: 40px;font-weight: bold; padding: 0px 48px }
 	text-align: center;
 	p.icone{
-		font-size: 4em; font-family: 'hautecombe-2015regular'; margin-bottom: 0;
+		font-size: 6em; font-family: 'hautecombe-2015regular'; margin-bottom: 0;
 	}
 }
 .slide-center.title{
-	border-bottom: 2px solid red;
 	position: relative;
+	margin-top: 50px;
 	div{position: absolute; bottom:0; width:100%}
 }
-.slide-center:not(.title) {font-size: 1.3em; font-style: italic; padding: 12px 48px; text-align: left}
+.slide-center:not(.title) {font-size: 1.3em; text-transform: uppercase; padding: 12px 48px; text-align: left}
 .rowTabled{
   display:table-row;
 }
