--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -1885,3 +1885,10 @@ label {
     margin-bottom: 5px;
     font-weight: 700;
 }
+
+//Animation parachute
+.inView .parachute{
+    position:relative;
+    top:0;
+}
+.parachute{top:-100vh; position:relative; transform: 2s top ease ;}
