--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -1891,4 +1891,4 @@ label {
     position:relative;
     top:0;
 }
-.parachute{top:-100vh; position:relative; transform: 2s top ease ;}
+.parachute{top:-100vh; position:relative; transition: 2s top ease ;}
