--- a/theme/wtp18/css/wtp2018.css
+++ b/theme/wtp18/css/wtp2018.css
@@ -2937,9 +2937,11 @@ label {
 .inView .parachute {
   position: relative;
   top: 0;
+  opacity: 1;
 }
 .parachute {
   top: -100vh;
   position: relative;
-  transition: 2s top ease ;
+  transition: 2s all ease ;
+  opacity: 0;
 }
