--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -1890,5 +1890,6 @@ label {
 .inView .parachute{
     position:relative;
     top:0;
+    opacity:1;
 }
-.parachute{top:-100vh; position:relative; transition: 2s top ease ;}
+.parachute{top:-100vh; position:relative; transition: 2s all ease ; opacity:0}
