--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -1763,9 +1763,9 @@ ul.programme li:first-of-type:first-line{font-size:1.5em}
 .slide-center.title{
 	position: relative;
 	margin-top: 50px;
-	div{position: absolute; bottom:0; width:100%}
+	div{bottom:0; width:100%}
 }
-.slide-center:not(.title) {font-size: 1.3em; text-transform: uppercase; padding: 12px 48px; text-align: left}
+.slide-center:not(.title) {font-size: 1.3em; text-transform: uppercase; padding: 12px 48px; text-align: center}
 .rowTabled{
   display:table-row;
 }
@@ -1792,6 +1792,10 @@ ul.programme li:first-of-type:first-line{font-size:1.5em}
 		h3{font-size: 1.3em}
 		p{font-size:0.9em}
 		p.icone{font-size: 3em; }
+	}
+	.slide{
+	height: 300px;
+	.colLeft, colRight{height: 300px;}
 	}
 }
 
