--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -1772,16 +1772,14 @@ ul.programme li:first-of-type:first-line{font-size:1.5em}
 .colLeft{
   display:table-cell;
   height: 100%;
-  img, div{-webkit-clip-path: polygon(0 0,100% 0,100% 50%,20% 75%,0 50%);
-	clip-path: polygon(0 0,100% 0,100% 50%,20% 75%,0 50%);
-	float: right}
+  width:200px;
 
 }
 .colRight{
   display:table-cell;
   height: 100%;
-  img, div{-webkit-clip-path:polygon(400px 0, 400px 400px, 120px 400px, 0px 200px, 120px 0px);
-  clip-path: polygon(400px 0, 400px 400px, 120px 400px, 0px 200px, 120px 0px);float: left}
+  width:200px;
+
 }
 .rowTabled>div{vertical-align: top;}
 @media screen and (max-width: @tablet) {
@@ -1795,7 +1793,7 @@ ul.programme li:first-of-type:first-line{font-size:1.5em}
 	}
 	.slide{
 	height: 300px;
-	.colLeft, colRight{height: 300px;}
+	.colLeft, colRight{height: 300px;width:50px}
 	}
 }
 
