--- a/theme/wtp18/css/wtp2018.css
+++ b/theme/wtp18/css/wtp2018.css
@@ -2938,30 +2938,31 @@ label {
 }
 .parachute {
   top: -100vh;
+  left: -50vw;
   position: relative;
-  animation: mymove 3s;
+  animation: parachute 3s;
   opacity: 0;
 }
 /* Standard syntax */
 @keyframes parachute {
   0% {
     top: -100vh;
-    left: 0;
+    left: -50vw;
     opacity: 0;
   }
   30% {
     top: -70vh;
-    left: 60vw;
+    left: 10vw;
     opacity: 0.5;
   }
   60% {
     top: -40vh;
-    left: 30vw;
+    left: -30vw;
     opacity: 0.8;
   }
   100% {
     top: 0;
-    left: 50vw;
+    left: 0vw;
     opacity: 1;
   }
 }
