--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -1891,10 +1891,10 @@ label {
 //Animation parachute
 .inView .parachute{
     position:relative;
-    top:0;
-    opacity:1;
+    
+    animation: parachute 3s;
 }
-.parachute{top:-100vh; left:-50vw; position:relative; animation: parachute 3s; opacity:0;}
+.parachute{top:-100vh; left:-50vw; position:relative; opacity:0;}
 
 /* Standard syntax */
 @keyframes parachute {
