--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -1891,7 +1891,7 @@ label {
 //Animation parachute
 .inView .parachute{
     position:relative;
-    
+    left:0; opacity:1; top:0;
     animation: parachute 3s;
 }
 .parachute{top:-100vh; left:-50vw; position:relative; opacity:0;}
