--- a/theme/wtp18/css/wtp2018.css
+++ b/theme/wtp18/css/wtp2018.css
@@ -3,7 +3,9 @@
   src: url('/theme/wtp18/fonts/hautecombe-2014-ronds-webfont.eot');
   src: url('/theme/wtp18/fonts/hautecombe-2014-ronds-webfont.eot?#iefix') format('embedded-opentype'), url('/theme/wtp18/fonts/hautecombe-2014-ronds-webfont.woff') format('woff'), url('/theme/wtp18/fonts/hautecombe-2014-ronds-webfont.ttf') format('truetype'), url('/theme/wtp18/fonts/hautecombe-2014-ronds-webfont.svg#hautecombe_2014_rondsregular') format('svg');
   font-weight: 400;
-  font-style: normal;/* regular */
+  font-style: normal;
+  
+  /* regular */
 }
 @font-face {
   font-family: 'hautecombe-2015regular';
@@ -688,7 +690,6 @@ input:checked + .push-menu-title:after {
   -o-transition: font-size 0.2s cubic-bezier(0.53, 2, 0.46, 1);
   transition: font-size 0.2s cubic-bezier(0.53, 2, 0.46, 1);
   /* improves performance issues on mobile*/
-
   -webkit-backface-visibility: hidden;
   -webkit-perspective: 1000;
 }
@@ -701,7 +702,6 @@ input:checked + .push-menu-title:after {
 .dots.dots-active:before {
   content: '○';
   /*◉*/
-
 }
 .push-menu-button p {
   text-transform: uppercase;
@@ -723,7 +723,6 @@ input:checked + .push-menu-title:after {
   -o-transition: -o-transform 0.2s cubic-bezier(0.16, 0.68, 0.43, 0.99);
   transition: transform 0.2s cubic-bezier(0.16, 0.68, 0.43, 0.99);
   /* improves performance issues on mobile*/
-
   -webkit-backface-visibility: hidden;
   overflow-x: hidden;
 }
@@ -936,6 +935,12 @@ header.parallax.page h1 {
   .presentation-section.content {
     height: 350px;
   }
+  .presentation-section.content h4 {
+    font-size: 40px;
+  }
+  .presentation-section.content p {
+    font-size: 40px;
+  }
   .presentation-section.content > div {
     text-align: left;
     vertical-align: bottom;
@@ -949,6 +954,12 @@ header.parallax.page h1 {
   .presentation-section.content {
     height: 250px;
   }
+  .presentation-section.content h4 {
+    font-size: 28px;
+  }
+  .presentation-section.content p {
+    font-size: 20px;
+  }
 }
 @media screen and (max-width: 500px) {
   .presentation-section {
@@ -956,6 +967,12 @@ header.parallax.page h1 {
   }
   .presentation-section.content {
     height: 180px;
+  }
+  .presentation-section.content h4 {
+    font-size: 20px;
+  }
+  .presentation-section.content p {
+    font-size: 15px;
   }
 }
 @media screen and (min-width: 1500px) {
@@ -2700,7 +2717,8 @@ iframe {
   width: 4.5em;
   background: #333333;
 }
-/*CAROUSEL*/.slide {
+/*CAROUSEL*/
+.slide {
   height: 400px;
   display: table;
   table-layout: fixed;
