--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -558,17 +558,17 @@ header.parallax.page{
 .presentation-section.content>div{line-height: normal;display: inline-block;text-align:center; vertical-align: middle;}
 @media screen and (min-width: 768px) {
     .large .presentation-section.content{height:600px}
-    .presentation-section{height:400px}
-    .presentation-section.content{height:350px;h4{font-size:40px};p{font-size:40px};}
+    .presentation-section{height:400px;h4{font-size:40px};p{font-size:40px};}
+    .presentation-section.content{height:350px}
     .presentation-section.content>div{text-align: left; vertical-align: bottom; padding-bottom: 24px}
 }
 @media screen and (min-width:500px) and (max-width: 768px){
-  .presentation-section{height:300px}
-  .presentation-section.content{height:250px;h4{font-size:28px};p{font-size:20px};}
+  .presentation-section{height:300px;h4{font-size:28px};p{font-size:20px};}
+  .presentation-section.content{height:250px}
 }
 @media screen and (max-width:500px) {
-  .presentation-section{height:200px}
-  .presentation-section.content{height:180px;h4{font-size:20px};p{font-size:15px};}
+  .presentation-section{height:200px;h4{font-size:20px};p{font-size:15px};}
+  .presentation-section.content{height:180px}
 }
 @media screen and (min-width: 1500px) {.presentation-section.content{height:500px}}
 .presentation-section.content>div{text-align: center; vertical-align: middle; padding-bottom: 0}
