--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -193,7 +193,8 @@ nav .nav > li > a:hover{color:@txt_violet; background-color: inherit}
 .h1 .h2 .h3 .h4 .h5 .p{padding:20px}
 .padding{padding:5px}
 .padding-large{padding:0 15px}
-.paddingv{padding-bottom: 50px; padding-top: 50px;padding-right: 70px;padding-left: 70px;}
+.paddingv{padding-bottom: 50px; padding-top: 50px;}
+@media (min-width: 768px){.paddingv{padding-right: 70px;padding-left: 70px;}}
 .style1 {
     color: #666666;
     text-align: justify;
