--- a/theme/wtp18/templates/blocks/contentDetail/pageWTP.html
+++ b/theme/wtp18/templates/blocks/contentDetail/pageWTP.html
@@ -18,7 +18,7 @@
     </div>-->
 
     <div class="row bg-special"  ng-if="fieldEntity['informations'] || rubedo.current.page.id=='5a7441ba396588375e7cb640'" >
-        <div class="container2 paddingv">
+        <div class="container-fluid paddingv">
             <div clas="col-sm-12">
                 <!--<rubedo-field ng-repeat="field in fields track by $index" ng-if="fieldEntity[field.config.name] && (field.config.name).substring(0, 5)=='infos' && fieldEntity[field.config.name].title!=''" class="color"></rubedo-field>
                 <rubedo-field field= "{{contentDetailCtrl.getFieldByName('informations')}}" ng-if="fieldEntity['informations']"></rubedo-field>-->
