--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -100,7 +100,7 @@ a:link, a:visited, a:hover,a{text-decoration:none;}
 	margin-top:-25px !important;
 	margin-right:10px}
 .owl-theme .owl-controls .owl-page span{background-color:white;opacity:0.8}	
-.owl-theme .owl-controls .owl-page.active span, .owl-theme .owl-controls.clickable .owl-page:hover span{background-color:#00d6d0;opacity:0.8}
+.owl-theme .owl-controls .owl-page.active span, .owl-theme .owl-controls.clickable .owl-page:hover span{background-color:white;opacity:0.8}
 
 ////////////////////////////////////////////////
     ///////global variables////////////////
