--- a/theme/wtp18/css/wtp2018.css
+++ b/theme/wtp18/css/wtp2018.css
@@ -234,8 +234,9 @@ a {
 }
 .owl-theme .owl-controls .owl-page.active span,
 .owl-theme .owl-controls.clickable .owl-page:hover span {
-  background-color: #00d6d0;
-  opacity: 0.8;
+  background-color: white;
+  opacity: 1;
+  font-size: 1.1em;
 }
 .txt-2 {
   color: #444444;
