--- a/theme/wtp18/css/wtp2018.css
+++ b/theme/wtp18/css/wtp2018.css
@@ -1305,7 +1305,7 @@ p.linkbox-rond-noir a:hover {
 }
 .block-detail p:nth-of-type(n+3) {
   display: inline-block;
-  margin: 15px 0 50px;
+  margin: 15px 0 0;
   padding: 0 50px;
   text-align: justify;
   width: 100%;
