--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -809,7 +809,7 @@ p.linkbox-rond-noir a, p.linkbox-rond-noir a:hover{color: white; text-decoration
 .titre-cap{margin:0; margin-bottom:10px}
 .block-detail p:nth-of-type(n+3) {
     display: inline-block;
-    margin: 15px 0 50px;
+    margin: 15px 0 0;
     padding: 0 50px;
     text-align: justify;
     width: 100%;
