--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -816,7 +816,7 @@ p.linkbox-rond-noir a, p.linkbox-rond-noir a:hover{color: white; text-decoration
     color: #666;
 }
 
-.block-detail{display:inline-block;float:none;text-align:center;vertical-align:top; margin:0 -5px}
+.block-detail{display:inline-block;float:none;text-align:center;vertical-align:top; margin:0 -5px 50px}
 .color:nth-of-type(2n) .icone p:first-of-type{color:@txt_grey !important}
 .video-block{
 				padding: 48px 0;
