--- a/theme/wtp18/css/wtp2018.css
+++ b/theme/wtp18/css/wtp2018.css
@@ -1316,7 +1316,7 @@ p.linkbox-rond-noir a:hover {
   float: none;
   text-align: center;
   vertical-align: top;
-  margin: 0 -5px;
+  margin: 0 -5px 50px;
 }
 .color:nth-of-type(2n) .icone p:first-of-type {
   color: #888785 !important;
