--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -1773,13 +1773,13 @@ ul.programme li:first-of-type:first-line{font-size:1.5em}
 .colLeft{
   display:table-cell;
   height: 100%;
-  width:200px;
+  width:20%;
 
 }
 .colRight{
   display:table-cell;
   height: 100%;
-  width:200px;
+  width:20%;
 
 }
 .rowTabled>div{vertical-align: top;}
@@ -1794,7 +1794,7 @@ ul.programme li:first-of-type:first-line{font-size:1.5em}
 	}
 	.slide{
 	height: 300px;
-	.colLeft, colRight{height: 300px;width:50px}
+	.colLeft, colRight{height: 300px;}
 	}
 }
 
