--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -1740,7 +1740,7 @@ ul.programme li:first-of-type:first-line{font-size:1.5em}
 	display:table;
 	table-layout: fixed;
 	width:100%;
-	.colLeft, colRight{height: 400px;}
+	.colLeft, .colRight{height: 400px;}
 }
 .colgroup{
   display:table-column-group;
