--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -1737,7 +1737,7 @@ ul.programme li:first-of-type:first-line{font-size:1.5em}
  	
 .slide{
 	height: 400px;
-	display:table;
+	display:table !important;
 	table-layout: fixed;
 	width:100%;
 	.colLeft, .colRight{height: 400px;}
