--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -1788,7 +1788,7 @@ ul.programme li:first-of-type:first-line{font-size:1.5em}
 	  width:100%;
 	}
 	.slide-center{
-		h3{font-size: 1.3em}
+		h3{font-size: 1.3em; padding:0}
 		p{font-size:0.9em}
 		p.icone{font-size: 3em; }
 	}
@@ -1796,6 +1796,7 @@ ul.programme li:first-of-type:first-line{font-size:1.5em}
 	height: 300px;
 	.colLeft, colRight{height: 300px;}
 	}
+	.slide-center:not(.title) {padding: 0;}
 }
 
 	////////////FORMS////////////
