--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -1791,6 +1791,7 @@ ul.programme li:first-of-type:first-line{font-size:1.5em}
 		h3{font-size: 1.3em; padding:0}
 		p{font-size:0.9em}
 		p.icone{font-size: 3em; }
+		height: 40%;
 	}
 	.slide{
 	height: 300px;
