--- a/theme/wtp18/css/wtp2018.css
+++ b/theme/wtp18/css/wtp2018.css
@@ -2755,6 +2755,9 @@ iframe {
   .middle {
     width: 100%;
   }
+  .slide-center {
+    height: 40%;
+  }
   .slide-center h3 {
     font-size: 1.3em;
     padding: 0;
