--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -1783,7 +1783,7 @@ ul.programme li:first-of-type:first-line{font-size:1.5em}
 
 }
 .rowTabled>div{vertical-align: top;}
-@media screen (min-width: @mobile) and (max-width: @tablet) {
+@media screen and (min-width: @mobile) and (max-width: @tablet) {
 	.middle{
 	  width:100%;
 	}
