--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -1795,7 +1795,7 @@ ul.programme li:first-of-type:first-line{font-size:1.5em}
 	}
 	.slide{
 	height: 300px;
-	.colLeft, colRight{height: 300px;}
+	.colLeft, .colRight{height: 300px;}
 	}
 	.slide-center:not(.title) {padding: 0;}
 }
@@ -1811,7 +1811,7 @@ ul.programme li:first-of-type:first-line{font-size:1.5em}
 	}
 	.slide{
 	height: 300px;
-	.colLeft, colRight{height: 300px;}
+	.colLeft, .colRight{height: 400px;}
 	}
 	.slide-center:not(.title) {padding: 0;}
 }
