--- a/theme/wtp18/css/wtp2018.less
+++ b/theme/wtp18/css/wtp2018.less
@@ -1805,13 +1805,14 @@ ul.programme li:first-of-type:first-line{font-size:1.5em}
 	}
 	.slide-center{
 		h3{font-size: 1.3em; padding:0}
-		p{font-size:0.9em}
+		p{font-size:0.85em}
 		p.icone{font-size: 3em; }
 		height: 40%;
+		.title{margin-top:30px;}
 	}
 	.slide{
 	height: 300px;
-	.colLeft, .colRight{height: 400px;}
+	.colLeft, .colRight{height: 300px;}
 	}
 	.slide-center:not(.title) {padding: 0;}
 }
